--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 /*---------HEADER--------*/
 @font-face{
     font-family: "logo";
-    src: url("fonts/Shrikhand.ttf");
+    src: url("../fonts/Shrikhand.ttf");
 }
   
 @font-face {
     font-family: "Roboto";
-    src: url("fonts/Roboto-Regular.ttf");
+    src: url("../fonts/Roboto-Regular.ttf");
 }
 
 @font-face {
     font-family: "Roboto-Black";
-    src: url("fonts/Roboto-Black.ttf");
+    src: url("../fonts/Roboto-Black.ttf");
 }
 @font-face {
     font-family: "Roboto-Light";
-    src: url("fonts/Roboto-Light.ttf");
+    src: url("../fonts/Roboto-Light.ttf");
 }
 .global-frame{
     max-width: 375px;
@@ -43,7 +43,6 @@ header {
     font-size: 30px;
     display: inline-block;
     padding: 1%;
-
 }
 
 .location {
@@ -112,9 +111,9 @@ header {
     margin-left: 5%;
 }
 /*---------RESTAURANTS BOX--------*/
-
 .restaurants-box{
     background-color: #f6f6f6;
+    height: 1380px;
 }
 .restaurants-box-content{
     display: flex;
@@ -135,6 +134,9 @@ header {
     background-color: #f6f6f6;
     display: block;
     margin: 20px 20px 20px 20px;
+}
+.function-tile:hover{
+    box-shadow: 0px 0px 15px 10px rgba(15, 15, 15, 0.3);
 }
 .function-tile{
     display: flex;
@@ -179,6 +181,10 @@ header {
 .function-tile:hover i{
     color: #9356DC;
 }
+.tile a{
+    text-decoration: none;
+    color:black;
+}
 .restaurant-tile-img img{
     width: 100%;
     height: 200px;
@@ -210,7 +216,79 @@ header {
 .restaurant-icon:hover .far{
     display: none;
 }
+
+/*----------FOOTER--------*/
 footer{
     background-color: #353535;
     color: #FFFFFF;
+    height: 170px;
 }
+.footer-logo{
+    font-family: 'logo', sans-serif;
+    font-size: 15px;
+    display: inline-block;
+    padding: 5%;
+}   
+.options-1{
+    padding-left: 5%;
+}
+.options-1 a{
+    text-decoration: none;
+    color : white
+}
+.options-2{
+    padding-left: 5%;
+}
+.options-2 a{
+    text-decoration: none;
+    color: #e0d6d6;
+}
+.option{
+    padding: 1% 0 1% 0;
+    display: flex;
+}
+#option-icon-1{
+    padding-right:12px;
+    font-size: 12px;
+}
+#option-icon-2{
+    padding-right:9px;
+    font-size: 10px;
+}
+/*---------LOADING SPINNER--------*/
+/*.custom-loading-spinner {
+    cursor: progress;
+    position: absolute;
+    width: auto;
+    height: 1380px;
+}
+.custom-loading-spinner::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10001;
+    overflow: hidden;
+    background: #0b0b0b;
+    opacity: 0.6;
+}
+.custom-loading-spinner::after {
+    box-sizing: border-box;
+    z-index: 10002;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+    border: 3px solid #f3f3f3;
+    border-top: 3px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: custom-loading 1s linear infinite;
+}
+@keyframes custom-loading {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}*/
+   
