--- a/css/menu/style.css
+++ b/css/menu/style.css
@@ -68,121 +68,123 @@ main{
     width: 100%;
     overflow: hidden;
 }
-.menu{
-    position: relative;
-    top: -62px;
-    background-color: #f6f6f6;
-    border-radius: 30px 30px 0 0;
-    height: 1120px;
-}
-.menu-title{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10% 5% 5% 5%;
-}
-#restaurant-title{
-    font-family: 'logo', sans-serif;
-    font-size: 30px;
-    display: inline-block;
-    padding: 1%;
-}
-#restaurant-icon{
-    font-size: 25px;
-}
-#restaurant-icon .fas{
-    display: none;
-}
-#restaurant-icon:hover .far{
-    display: none;
-}
-#restaurant-icon:hover .fas{
-    display: inline-block;
-    color: #9356DC;
-}
-.entrees-box-title{
-    font-size: 20px;
-    border-bottom: #99E2D0 solid 4px;
-    padding-bottom: 3px;
-    margin: 15px 0 20px 10px;
-    width: 10%;
-}
-.plats-box{
-    margin-top: 40px;
-}
-.plats-box-title{
-    font-size: 20px;
-    border-bottom: #99E2D0 solid 4px;
-    padding-bottom: 3px;
-    margin: 15px 0 20px 10px;
-    width: 10%;
-}
-.desserts-box{
-    margin-top: 40px;
-}
-.desserts-box-title{
-    font-size: 20px;
-    border-bottom: #99E2D0 solid 4px;
-    padding-bottom: 3px;
-    margin: 15px 0 20px 10px;
-    width: 10%;
-}
-.command-button{
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    padding-top: 40px;
-}
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-    background-image: linear-gradient(0deg, #9356DC , #FF79DA);
-    padding: 4.5%;
-    width: 50%;
-    border-radius: 30px;
-}
-/*----------TILES--------*/
-.tile{
-    transition: all .15s ease-in-out;
-    box-shadow: 2px 0px 8px -4px rgb(165, 165, 165);
-    border-radius: 10px;
-    background-color: #FFFFFF;
-    display: block;
-    margin: 10px 10px 10px 10px;
-}
-.tile-content{
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-.tile-text{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 35px;
-}
-.tile-meal{
-    font-size: 15px;
-    font-weight: bold;
-}
-.tile-ingredients{
-    font-size: 12px;
-}
-.tile-price{
-    font-size: 12px;
-    font-weight: bold;
-    align-self: flex-end;
-    padding-bottom: 3%;
-}
-.add-meal{
-    display: none;
-}
+    /*----------MENU BOX--------*/
+
+    .menu{
+        position: relative;
+        top: -62px;
+        background-color: #f6f6f6;
+        border-radius: 30px 30px 0 0;
+        height: 1120px;
+    }
+    .menu-title{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10% 5% 5% 5%;
+    }
+    #restaurant-title{
+        font-family: 'logo', sans-serif;
+        font-size: 30px;
+        display: inline-block;
+        padding: 1%;
+    }
+    #restaurant-icon{
+        font-size: 25px;
+    }
+    #restaurant-icon .fas{
+        display: none;
+    }
+    #restaurant-icon:hover .far{
+        display: none;
+    }
+    #restaurant-icon:hover .fas{
+        display: inline-block;
+        color: #9356DC;
+    }
+    .entrees-box-title{
+        font-size: 20px;
+        border-bottom: #99E2D0 solid 4px;
+        padding-bottom: 3px;
+        margin: 15px 0 20px 10px;
+        width: 10%;
+    }
+    .plats-box{
+        margin-top: 40px;
+    }
+    .plats-box-title{
+        font-size: 20px;
+        border-bottom: #99E2D0 solid 4px;
+        padding-bottom: 3px;
+        margin: 15px 0 20px 10px;
+        width: 10%;
+    }
+    .desserts-box{
+        margin-top: 40px;
+    }
+    .desserts-box-title{
+        font-size: 20px;
+        border-bottom: #99E2D0 solid 4px;
+        padding-bottom: 3px;
+        margin: 15px 0 20px 10px;
+        width: 10%;
+    }
+    .command-button{
+        display: flex;
+        justify-content: center;
+        font-size: 15px;
+        padding-top: 40px;
+    }
+    .button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        background-image: linear-gradient(0deg, #9356DC , #FF79DA);
+        padding: 4.5%;
+        width: 50%;
+        border-radius: 30px;
+    }
+    /*----------TILES--------*/
+    .tile{
+        transition: all .15s ease-in-out;
+        box-shadow: 2px 0px 8px -4px rgb(165, 165, 165);
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        display: block;
+        margin: 10px 10px 10px 10px;
+    }
+    .tile-content{
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .tile-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 35px;
+    }
+    .tile-meal{
+        font-size: 15px;
+        font-weight: bold;
+    }
+    .tile-ingredients{
+        font-size: 12px;
+    }
+    .tile-price{
+        font-size: 12px;
+        font-weight: bold;
+        align-self: flex-end;
+        padding-bottom: 3%;
+    }
+    .add-meal{
+        display: none;
+    }
 /*----------FOOTER--------*/
 footer{
     background-color: #353535;
