Desktop and tablet version added to menu page

--- a/css/home/style.css
+++ b/css/home/style.css
@@ -291,6 +291,8 @@ footer{
     padding-right:9px;
     font-size: 10px;
 }
+/*----------MEDIA QUERIES--------*/
+/*Tablet version*/
 
 @media screen and (min-width: 500px) and (max-width: 991px){
     .global-frame{
@@ -300,6 +302,8 @@ footer{
         right: -392px;
     }
 }
+/*Desktop version*/
+
 @media screen and (min-width: 992px){
     .global-frame{
         max-width: 992px;
