--- a/css/menu/style.css
+++ b/css/menu/style.css
@@ -75,7 +75,7 @@ main{
         top: -62px;
         background-color: #f6f6f6;
         border-radius: 30px 30px 0 0;
-        height: 1120px;
+        padding-bottom: 92px;
     }
     .menu-title{
         display: flex;
@@ -107,7 +107,7 @@ main{
         border-bottom: #99E2D0 solid 4px;
         padding-bottom: 3px;
         margin: 15px 0 20px 10px;
-        width: 10%;
+        width: 45px;
     }
     .plats-box{
         margin-top: 40px;
@@ -117,7 +117,7 @@ main{
         border-bottom: #99E2D0 solid 4px;
         padding-bottom: 3px;
         margin: 15px 0 20px 10px;
-        width: 10%;
+        width: 45px;
     }
     .desserts-box{
         margin-top: 40px;
@@ -127,7 +127,7 @@ main{
         border-bottom: #99E2D0 solid 4px;
         padding-bottom: 3px;
         margin: 15px 0 20px 10px;
-        width: 10%;
+        width: 45px;
     }
     .command-button{
         display: flex;
@@ -182,9 +182,6 @@ main{
         align-self: flex-end;
         padding-bottom: 3%;
     }
-    .add-meal{
-        display: none;
-    }
 /*----------FOOTER--------*/
 footer{
     background-color: #353535;
@@ -234,6 +231,13 @@ footer{
     .notification{
         right: -392px;
     }
+    .menu{
+        height: 100%;
+    }
+    footer{
+        position: relative;
+        top: 110px;
+    }
 }
 
 /*Desktop version*/
@@ -242,17 +246,26 @@ footer{
     .global-frame{
         max-width: 992px;
     }
+    .top-content{
+        width: 70%;
+        height: 70px;
+    }
+    .restaurant-picture img{
+        height: 800px;
+    }
     .notification{
         right: -392px;
     }
     .menu{
-        height: unset;
-        padding-bottom: 50px;
+        height: 100%;
+    }
+    .tile-price{
+        padding: 2%;
     }
     footer{
         height: unset;
         position: relative;
-        top: 115px;
+        top: 690px;
     }
 
 }
