--- a/css/menu/animation.css
+++ b/css/menu/animation.css
@@ -1,30 +1,3 @@
-/*.add-meal-animation{
-    display: none;
-}
-.tile:hover .add-meal{
-    transform: scale(0.1);
-    transition: transform 330ms ease-in-out;
-}*/
-/*.tile:hover .add-meal-animation{
-
-    display: inline-block;
-    background-color: #99E2D0;
-    height: 100%;
-    transform-origin: right 50%;
-    transform: scaleX(1);
-    transition: transform 1000ms cubic-bezier(.32,0,.07,1);
-    /*transform: translateY(250%);
-    transition: transform 280ms ease-out 50ms;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 100%;
-    transform: translateY(0);
-    transition: width 2s;
-    transform: translateX(2);
-}*/
 .tile:hover {
     display:flex;
     position: relative;
@@ -58,9 +31,23 @@
       -webkit-animation: slide 1.5s forwards;
       animation: slide 1.5s forwards;
   }
+  .tile:hover .tile-price{
+    padding-left: 40px;
+}
+  @media screen and (min-width: 500px) and (max-width: 991px){
+    .tile:hover .tile-price{
+        padding-left: 140px;
+    }
+    .tile-text{
+        width: 180px;
+    }
+  }
   @media screen and (min-width: 992px){
     .tile:hover .tile-price{
         padding-left: 620px;
+    }
+    .tile-text{
+        width: 180px;
     }
 }
   @-webkit-keyframes slide {
