--- a/css/menu/style.css
+++ b/css/menu/style.css
@@ -180,7 +180,7 @@ main{
         font-size: 12px;
         font-weight: bold;
         align-self: flex-end;
-        padding-bottom: 3%;
+        padding-top: 20px;
     }
 /*----------FOOTER--------*/
 footer{
