--- a/css/menu/animation.css
+++ b/css/menu/animation.css
@@ -1,10 +1,7 @@
 /*---------SLIDE--------*/
-.slide{
-      display: none;
-  }
+
 .slide-container{
     display: flex;
-    justify-content: center;
     align-items:center;
 }
 .slide-content{
@@ -20,9 +17,15 @@
     }
 .tile:hover .tile-text{
     width: 170px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .tile:hover .tile-price{
-    padding-left: 60px;
+    top: 15px;
+    position: absolute;
+    right: 0px;
+    animation: slideprice 1s forwards;
 }
 .tile:hover .slide{
     display: flex;
@@ -51,7 +54,7 @@
   }
   @media screen and (min-width: 992px){
     .tile:hover .tile-price{
-        padding-left: 650px;
+        padding-left: 640px;
     }
     .tile:hover .tile-text{
         width: 180px;
@@ -66,7 +69,13 @@
   @keyframes slide {
     100% { right: 0; }
   }
-
+  @-webkit-keyframes slideprice {
+    100% { right: 90px; }
+  }
+  
+  @keyframes slideprice {
+    100% { right: 90px; }
+  }
   @keyframes spin {
     to{
         transform: rotate(360deg);
